# Polyphemus

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
api/: __init__.py  handler.py  requirements.txt
data/acls/: document_acls.json
data/documents/finance/: q3_earnings.md  vendor_payments.md
data/documents/general/: company_overview.md
data/documents/hr/: employee_handbook.md  pto_policy.md
data/documents/malicious/: vendor_invoice_injection.md
data/fixtures/: groups.json  users.json
docs/: ACCESS_CONTROL.md  ARCHITECTURE.md  DEMO.md  SECURITY_CONTROLS.md  THREAT_MODEL.md
iac/cdk/: README.md  app.py  cdk.json  requirements.txt
iac/cdk/stacks/: __init__.py  api_stack.py  identity_stack.py  storage_stack.py  vector_stack.py
iac/terraform/: README.md  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
scripts/: render_architecture.py  run_demo.py  seed_store.py
src/polyphemus/: __init__.py  config.py  models.py  pipeline.py
src/polyphemus/acl/: __init__.py  metadata.py  tagger.py
src/polyphemus/audit/: __init__.py  logger.py
src/polyphemus/authz/: __init__.py  identity.py  policy.py  query_filter.py
src/polyphemus/aws/: __init__.py  clients.py  mock_bedrock.py  mock_s3.py  mock_vector_store.py
src/polyphemus/chunking/: __init__.py  chunker.py
src/polyphemus/defense/: __init__.py  injection.py  system_prompt.py
src/polyphemus/generation/: __init__.py  bedrock_client.py
tests/: conftest.py  test_audit_logger.py  test_authz_policy.py  test_identity.py  test_injection_defense.py  test_no_boto3_in_mock.py  test_pipeline_scenarios.py  test_query_filter.py  test_redaction.py  test_retrieval_isolation.py
(+26 files in other folders)
